# jpeg-decoder

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: main.cpp
cmake/: jpeg_decoderConfig.cmake.in
fuzz/artifacts/jpeg/: crash-9022ce888e97fb4b77e52ef4d4a9b5dc12f466d7
include/: image.h
include/jpeg_decoder/: decoder.h  image.h
src/: decoder.cpp  fft.cpp  fft.h  huffman.cpp  huffman.h  jpeg_entropy.cpp  jpeg_entropy.h  jpeg_postprocess.cpp  jpeg_postprocess.h  jpeg_segments.cpp  jpeg_segments.h  jpeg_types.h  reader.cpp  reader.h  require.h
tests/: fuzz_fft.cpp  fuzz_huffman.cpp  fuzz_jpeg.cpp  replay_artifacts.cpp  test_baseline.cpp  test_fft.cpp  test_huffman.cpp
utils/: libjpg_reader.cpp  libjpg_reader.hpp  png_encoder.cpp  png_encoder.hpp  test_commons.cpp
